--- a/src/html/sample.ejs
+++ b/src/html/sample.ejs
@@ -2,7 +2,12 @@
 <%- include('/_header.ejs')%>
 
     <div class="contents">
-        contents
+        <div class="grid">
+            <div>grid a</div>
+            <div>grid b</div>
+            <div>grid c</div>
+            <div>grid d</div>
+        </div>
     </div>
 
 <%- include('/_footer.ejs')%>
